# cryze-server

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
cryze_server/: server.py
docker/: Dockerfile  docker-compose.yml
scripts/: build_pypi.sh  run_cryze_server.py  upload_pypi.sh
src/cryze_server/: __init__.py  main.py  server.py
tests/: test_server.py
