[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cryze_server"
authors = [
    {name = "Carson Loyal", email = "carsonloyal123@me.com"},
]
description = "A python websocket server for the Cryze project."
readme = "README.rst"
requires-python = ">=3.11"
keywords = ["wyze", "video", "camera", "websocket", "server", "cryze"]
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Programming Language :: Python :: 3",

]
dependencies = [
    "websockets",
    'importlib-metadata; python_version<"3.10"',
]
dynamic = ["version"]

[project.scripts]
basic_server = "cryze_server.server:create_demo_server"