[project]
name = "cryze_server"
version = "0.0.18"
description = "Cryze Websocket server that coordinates the Cryze-Android app and the outside world."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Carson Loyal", email = "carsonloyal123@me.com"}]
license = {file = "LICENSE"}
dependencies = [
  "websockets",
  "asyncio"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
cryze-server = "cryze_server.run_server:main"

[tool.poetry]
name = "cryze_server"
description = "Cryze Websocket server that coordinates the Cryze-Android app and the outside world."
authors = ["Carson Loyal <carsonloyal123@me.com>"]

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^9.0"
asyncio = "^3.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2"